@@ -1,3 +1,7 @@
+2005-10-24  Ingo Renner  <typo3@ingo-renner.com>
+
+	* FIX fixed bug with category selector, now using cHash. Thanks to Benjamin A. Schmit
+	
 2005-10-19  Ingo Renner  <typo3@ingo-renner.com>
 
 	* FIX rendering now works like regular content elements
